07. MINI_0814_V2/DB.YAML
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: default
spec:
  type: ExternalName
  externalName: db.sbb.local
  ports:
    - protocol: TCP
      port: 3306
