07. MINI_0814_V2/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc

spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nareunhang/test:finalFront
        imagePullPolicy: Always
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-config
        configMap:
          name: my-nginx-config
