07. MINI_0814_V2/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "myip"
    # Uncomment and provide the correct name if using Managed Certificates
    networking.gke.io/managed-certificates: www-seungho2
    networking.gke.io/v1beta1.FrontendConfig: "my-frontend-config"
spec:
  rules:
  - host: www.seungho.shop
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
  - host: was.seungho.shop
    http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: spring-svc
            port:
              number: 8080  # Adjust this port based on your java-svc configuration
